--- a/apps/home/views/index.jade
+++ b/apps/home/views/index.jade
@@ -5,7 +5,7 @@ block content
   hr
 
   #playlist-creator
-    form(action="/playlist", method="post")
+    form(action="/playlists", method="post")
       input(type="text", placeholder="Name your playlist")
       input.btn(type="submit", value="New")
     button.btn Create A Playlist
@@ -18,14 +18,26 @@ block content
           span.controls
             i.icon-plus
             i.icon-edit
+            i.icon-trash
+        form.song-creator(action="playlists/name/songs", method="post")
+          fieldset
+            legend Add Song
+            label Artist:
+              input(type="text", placeholder="Artist")
+            label Song:
+              input(type="text", placeholder="Song")
+            input.btn(type="submit", value="Add Song")
+
         ul.songs
           li.song
+            i.icon-trash
             dl
               dt Artist: 
               dd Lana Del Rey
               dt Song: 
               dd Blue Jeans
           li.song
+            i.icon-trash
             dl
               dt Artist: 
               dd 2 Chainz
