added require, underscore, backbone and jquery

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,3 +8,4 @@ html
   body
     #container
       block content
+    script(src="/javascripts/lib/require.js", data-main="/javascripts/src/js/config.js")
