added backbone classes, set up playlist model validation

--- a/apps/home/views/index.jade
+++ b/apps/home/views/index.jade
@@ -8,7 +8,7 @@ block content
     form(action="/playlists", method="post")
       input(type="text", placeholder="Name your playlist")
       input.btn(type="submit", value="Make New Playlist")
-    button.btn Create A Playlist
+    button.btn.create-playlist Create A Playlist
 
   div
     ul#playlists
