--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -20,6 +20,14 @@ i {
   text-align: center;
 }
 
+#playlist-creator form {
+  display: none;
+}
+
+#playlist-creator form.show {
+  display: block;
+}
+
 #playlist-creator form input {
   margin: 0 5px;
 }
@@ -30,6 +38,7 @@ i {
 }
 
 #playlists .song-creator {
+  display: none;
   background-color: #ccc;
   padding: 15px;
 }
