set up handlebars templates and gruntjs

--- a/apps/home/views/index.jade
+++ b/apps/home/views/index.jade
@@ -6,7 +6,7 @@ block content
 
   #playlist-creator
     form(action="/playlists", method="post")
-      input(type="text", placeholder="Name your playlist")
+      input.name(type="text", placeholder="Name your playlist")
       input.btn(type="submit", value="Make New Playlist")
     button.btn.create-playlist Create A Playlist
 
