playlists can now be updated

--- a/public/javascripts/templates/playlist.hbs
+++ b/public/javascripts/templates/playlist.hbs
@@ -1,5 +1,7 @@
 <li class="playlist">
-  <h3> {{ title }} 
+  <h3>
+    <span class="title">{{ title }}</span> 
+    <input class="title" type="text" placeholder="{{ title }}">
     <span class="controls">
       <i class="icon-plus"></i>
       <i class="icon-edit"></i>
