building songs collection class

--- a/public/javascripts/templates/playlist.hbs
+++ b/public/javascripts/templates/playlist.hbs
@@ -9,10 +9,11 @@
     </span>
   </h3>
   <form action="playlists/name/songs" method="post" class="song-creator">
+    <i class="icon-remove"></i>
     <fieldset>
       <legend>Add Song</legend>
-      <label>Artist:<input type="text" placeholder="Artist"></label>
-      <label>Song:<input type="text" placeholder="Song"></label>
+      <label>Artist:<input class="artist" type="text" placeholder="Artist"></label>
+      <label>Song:<input class="song" type="text" placeholder="Song"></label>
       <input type="submit" value="Add Song" class="btn pull-right">
     </fieldset>
   </form>
