bubbling events correctly from collection to model

--- a/public/javascripts/templates/playlist.hbs
+++ b/public/javascripts/templates/playlist.hbs
@@ -5,7 +5,7 @@
     <span class="controls">
       <i class="icon-plus"></i>
       <i class="icon-edit"></i>
-      <i class="icon-trash"></i>
+      <i class="icon-trash remove-playlist"></i>
     </span>
   </h3>
   <form action="playlists/name/songs" method="post" class="song-creator">
