--- a/public/javascripts/templates/song.hbs
+++ b/public/javascripts/templates/song.hbs
@@ -1,6 +1,6 @@
 
   <li class="song">
-  	<i class="icon-trash"></i>
+  	<i class="icon-trash remove-song"></i>
   	<dl>
   		<dt>Artist: </dt>
   		<dd>{{ artist }}</dd>
