cleaned up code

--- a/public/javascripts/templates/playlist.hbs
+++ b/public/javascripts/templates/playlist.hbs
@@ -1,6 +1,6 @@
-<li class="playlist">
+<li class="playlist" data-id="{{ id }}">
   <h3>
-    <span class="title">{{ title }}</span> 
+    <span class="title">{{ name }}</span> 
     <input class="title" type="text" placeholder="{{ title }}">
     <span class="controls">
       <i class="icon-plus"></i>
