updated song display code

--- a/public/javascripts/templates/playlist.hbs
+++ b/public/javascripts/templates/playlist.hbs
@@ -1,7 +1,7 @@
 <li class="playlist" data-id="{{ id }}">
   <h3>
     <span class="title">{{ name }}</span> 
-    <input class="title" type="text" placeholder="{{ title }}">
+    <input class="title" type="text" placeholder="{{ name }}">
     <span class="controls">
       <i class="icon-plus"></i>
       <i class="icon-edit"></i>
