changed uls to ols, cuz playlists are sorted thingies

--- a/public/javascripts/templates/playlist.hbs
+++ b/public/javascripts/templates/playlist.hbs
@@ -17,5 +17,5 @@
       <input type="submit" value="Add Song" class="btn pull-right">
     </fieldset>
   </form>
-  <ul class="songs"></ul>
+  <ol class="songs"></ol>
 </li>
